# musings-backend

./: .gitignore  Dockerfile  LICENSE  README.md  directory.py  directory.txt  manage.py  notes.txt  pyproject.toml  requirements.txt
api/: file_tree.txt  filetree.py  serializers.py  urls.py  views.py
finance/: forms.py  models.py  urls.py  views.py
finance/migrations/: 0001_initial.py  0002_userwatchlist_group.py  0003_userwallet_usertransaction_userportfolio.py  0004_userplaystock_userplaywallet_userstockhistory_and_more.py  0005_alter_userstockhistory_bought_price_and_more.py  0006_userwallethistory_stocks_value_and_more.py
musings/: asgi.py  middleware.py  settings.py  urls.py  wsgi.py
portfolio/: forms.py  models.py  serializers.py  urls.py  views.py
portfolio/migrations/: 0001_initial.py  0002_portfolioitem_backend_features_and_more.py
sudoku/: .views.py.swp  models.py  serializers.py  sudoku.txt  sudoku_logic.py  urls.py  views.py
sudoku/migrations/: 0001_initial.py
todo/: models.py  serializers.py  urls.py  views.py
todo/migrations/: 0001_initial.py
weather/: forecast.py  forecast.txt  models.py  urls.py  views.py
weather/migrations/: 0001_initial.py
